# esp-zigbee-matter-ecosystem

./: .gitignore  CMakeLists.txt  ESP32-H2_Zigbee_Sensor_Selection_Guide.md  README.md
.github/workflows/: build-and-release.yml
docs/: cicd_guide.md  end_node_guide.md  gateway_guide.md  hardware_configuration_guide.md  libraries_and_sdks.md
end_node/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
end_node/components/sensor_drivers/: CMakeLists.txt
end_node/components/sensor_drivers/aht20/: aht20_sensor.c
end_node/components/sensor_drivers/bh1750/: bh1750_sensor.c
end_node/components/sensor_drivers/bme280/: bme280_sensor.c
end_node/components/sensor_drivers/dht22/: dht22_sensor.c
end_node/components/sensor_drivers/ds18b20/: ds18b20_sensor.c
end_node/components/sensor_drivers/hx711/: hx711_sensor.c
end_node/components/sensor_drivers/internal/: internal_sensor.c
end_node/components/sensor_drivers/jsn_sr04t/: jsn_sr04t_sensor.c
end_node/components/sensor_drivers/scd41/: scd41_sensor.c
end_node/components/sensor_drivers/sht30/: sht30_sensor.c
end_node/components/sensor_drivers/sht4x/: sht4x_sensor.c
end_node/components/sensor_drivers/soil_moisture/: soil_moisture_sensor.c
end_node/components/sensor_drivers/stub/: stub_sensor.c
end_node/components/sensor_drivers/veml7700/: veml7700_sensor.c
end_node/components/sensor_drivers/ze03_nh3/: ze03_nh3_sensor.c
end_node/components/sensor_universal/: CMakeLists.txt  sensor_registry.c
end_node/components/sensor_universal/include/: sensor_registry.h
end_node/components/zcl_clusters/: CMakeLists.txt  zcl_cluster_config.c
end_node/components/zcl_clusters/include/: zcl_cluster_config.h
end_node/main/: CMakeLists.txt  Kconfig.projbuild  end_node_main.c  idf_component.yml  main.c  sensor_hub.c  sensor_hub.h  zigbee_config.c  zigbee_config.h
gateway/: sdkconfig.defaults
gateway/components/network_fsm/: CMakeLists.txt  network_fsm.c
gateway/components/network_fsm/include/: network_fsm.h
gateway/components/rcp_uart/: rcp_uart.c
gateway/components/rcp_uart/include/: rcp_uart.h
gateway/main/: CMakeLists.txt  gateway_main.c
gateway/main_soc/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
gateway/main_soc/components/network_fsm/: CMakeLists.txt  network_fsm.c
gateway/main_soc/components/rcp_uart/: CMakeLists.txt
gateway/main_soc/components/rcp_uart/include/: rcp_uart.h
gateway/main_soc/main/: Kconfig.projbuild  idf_component.yml
gateway/rcp_soc/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
gateway/rcp_soc/main/: esp_ot_rcp.c  idf_component.yml
patches/: apply_patches.sh
